--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influerncer-gear</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <header class="headers">
+        <div class="head-details">
+            <h1>
+                Start your Journey as
+                Influencer
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nam fuga labore eligendi? Officia fugiat
+                totam delectus tempore iusto velit et inventore quia. Ratione quibusdam, officia at aperiam placeat
+                dolor dolorum nam est obcaecati nisi minus? Nemo dolores vel suscipit.</p>
+                <button class="prebook">
+                    Preebook now
+                </button>       
+        </div>
+        <div class="head-pic">
+            <img src="images/main-camera.png" alt="">
+        </div>
+
+        
+    </header>
 </body>
+
 </html>
