--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influerncer-gear</title>
+     <!-- font awesome -->
+     <script src="https://kit.fontawesome.com/8e911452d2.js" crossorigin="anonymous"></script>
+     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,6 +32,146 @@
 
         
     </header>
+    <div class="popular-collection">
+        <h3>Popular Collection</h3>
+        <div class="product-details">
+            <div class="product-detail">
+                <img src="images/tripod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/mic.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/airpod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/drone.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/lights.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/setup.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/camera.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/single-light.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+            <div class="product-detail">
+                <img src="images/action.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h5>$50.48</h5>
+                <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
