--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influerncer-gear</title>
-     <!-- font awesome -->
-     <script src="https://kit.fontawesome.com/8e911452d2.js" crossorigin="anonymous"></script>
-     <!-- stylesheet -->
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/8e911452d2.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,16 +22,17 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nam fuga labore eligendi? Officia fugiat
                 totam delectus tempore iusto velit et inventore quia. Ratione quibusdam, officia at aperiam placeat
                 dolor dolorum nam est obcaecati nisi minus? Nemo dolores vel suscipit.</p>
-                <button class="prebook">
-                    Preebook now
-                </button>       
+            <button class="prebook">
+                Preebook now
+            </button>
         </div>
         <div class="head-pic">
             <img src="images/main-camera.png" alt="">
         </div>
 
-        
+
     </header>
+    
     <div class="popular-collection">
         <h3>Popular Collection</h3>
         <div class="product-details">
@@ -39,139 +40,154 @@
                 <img src="images/tripod.png" alt="">
                 <h3>Flex Tripod</h3>
                 <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/mic.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>microphone</h3>
+                <h5>$120.25</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/airpod.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Airbuds</h3>
+                <h5>$100.00</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/drone.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Drone</h3>
+                <h5>$980.25</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/lights.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Light Setup</h3>
+                <h5>$120.00</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
-            <div class="product-detail">
+            <div>
                 <img src="images/setup.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Photoshoot Set</h3>
+                <h5>$820.40</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/camera.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Vlogging Camera</h3>
+                <h5>$1800.80</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
-            </div>
+                    Buyers protection possible!</p>
+            </div class="star-rating">
             <div class="product-detail">
                 <img src="images/single-light.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Green Screen</h3>
+                <h5>$15.48</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
             <div class="product-detail">
                 <img src="images/action.png" alt="">
-                <h3>Flex Tripod</h3>
-                <h5>$50.48</h5>
-                <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
-                            </div>
+                <h3>Action Camera</h3>
+                <h5>$380.00</h5>
+                <div class="star-rating">
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+                    <i class="fas fa-star filled"></i>
+
+                    <i class="fas fa-star-half-alt"></i>
+                    <span>4.5</span>
+                </div>
                 <p>Wordwide shifting available
-Buyers protection possible!</p>
+                    Buyers protection possible!</p>
             </div>
         </div>
+        <a class="see-more" href="">See more <span><i class="fas fa-long-arrow-alt-right"></i></span></a>
     </div>
+    <footer>
+        <div class="footer-content">
+            <h3>Influencer Product</h3>
+            <p>Copyright &copy 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <ul>
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-facebook"></i></li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-youtube"></i></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
